# boost-software-test

./: .gitignore  COUNTRY_TEAM_REPLY.md  DIAGNOSIS.md  IMPROVEMENTS.md  ISSUE.md  README.md  justfile  pyproject.toml
.github/: pull_request_template.md
app/: __init__.py  config.py  mail.py
app/adapters/: notifications.py
app/domain/: enums.py  models.py  store.py
app/orders/: __init__.py  routes.py
app/templates/email/: notifications.html
data/: support.db  support.sql
tests/: conftest.py  test_notifications.py
